# Releases

  ## bitergia-analytics-opensearch-dashboards 0.14.0 - (2023-11-17)
  
  * No changes on this component. The version is bumped to align it
    with the rest of the components.

  ## bitergia-analytics-opensearch-dashboards 0.13.0 - (2023-11-07)
  
  * No changes on this component. The version is bumped to align it
    with the rest of the components.

  ## bitergia-analytics-opensearch-dashboards 0.12.0 - (2023-10-25)
  
  * No changes on this component. The version is bumped to align it
    with the rest of the components.