@@ -1,0 +1,4 @@
+  ## bitergia-analytics-opensearch-dashboards 0.15.2 - (2023-12-19)
+  
+  * No changes on this component. The version is bumped to align it
+    with the rest of the components.
