@@ -1,5 +1,10 @@
 # Releases
 
+  ## bitergia-analytics-opensearch-dashboards 0.15.2 - (2023-12-19)
+  
+  * No changes on this component. The version is bumped to align it
+    with the rest of the components.
+
   ## bitergia-analytics-opensearch-dashboards 0.14.0 - (2023-11-17)
   
   * No changes on this component. The version is bumped to align it
